<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/icons"
    tools:context=".ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="19.20dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/product_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24.70dp"
                    android:textStyle="bold"
                    android:layout_marginTop="67.20dp"
                    android:text="@string/product_size"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/product_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24.70dp"
                    android:textStyle="bold"
                    android:layout_marginTop="35.20dp"
                    android:text="@string/product_color"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24.70dp"
                    android:textStyle="bold"
                    android:layout_marginTop="35.20dp"
                    android:text="@string/product_price"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/full_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/android_pay"
                    android:src="@drawable/mango"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom"
        android:paddingBottom="38.40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/description_example"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/icons"
            android:text="@string/add_to_cart"
            android:textSize="30dp"
            android:padding="15dp"/>

    </LinearLayout>

</LinearLayout>
